fix: hold initial text-align & yls

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -12,6 +12,7 @@
   padding: unset;
   border: unset;
   outline: unset;
+  text-align: initial;
   flex-flow: column;
   max-width: var(--panel-width);
   min-width: var(--panel-width);
