--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -55,6 +55,10 @@
   content: '\e603';
 }
 
+.__icon-weixin:before {
+  content: "\e637";
+}
+
 .__icon-ref:before {
   content: '\e604';
 }
